--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.2</version>
-            <scope>compile</scope>
+            <scope>5.8.2</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
